# SmolBench

./: .gitignore  README.md  pyproject.toml
evals/: __init__.py  openrouter.py
induction/: README.md  chromatic.py
lean/: .gitignore  README.md  pyproject.toml  pyrightconfig.json
lean/configs/: main.yaml  main_v2.yaml  main_v3.yaml  main_v3_2.yaml  noise_iso.yaml  noise_iso_3way.yaml  noise_iso_deepseek.yaml  noise_iso_gpt55.yaml  noise_iso_r1.yaml  smoke.yaml  smoke_main_v3.yaml
lean/figures/: _util.py  marginal_content_vs_noise.py  prompt_length_vs_hint.py  response_length_per_model_rung.py  success_rate_bars.py  success_rate_per_model_rung.py  success_rate_with_noise.py
lean/leaneval/: cli.py  context.py  corpus.py  premises.py  prompt.py  runner.py  verify.py
lean/leaneval/llm/: __init__.py  anthropic.py  base.py  factory.py  openai_compat.py
notebooks/: cot_extens.yaml  cot_intens.yaml  decode_extens.yaml  decode_intens.yaml  induction_eval.ipynb  induction_eval_analysis.ipynb  induction_eval_one_hop.ipynb  moe_extens.yaml  moe_intens.yaml
notebooks/chromatic/: induction_eval.ipynb  induction_eval_analysis.ipynb  induction_eval_one_hop.ipynb
notebooks/chromatic/results/: one_hop_moe_intens.yaml
notebooks/periodic/: induction_eval.ipynb  power_analysis.py
notebooks/periodic/results/: cot_extens.yaml  cot_intens.yaml  cot_noise_intens.yaml  decode_extens.yaml  decode_intens.yaml  decode_noise_intens.yaml  moe_extens.yaml  moe_intens.yaml  moe_noise_intens.yaml
notebooks/periodic/results/cot_extens/: rep_1777.yaml  rep_1778.yaml  rep_1779.yaml  rep_1780.yaml  rep_1781.yaml  rep_1782.yaml  rep_1783.yaml  rep_1784.yaml  rep_1785.yaml  rep_1786.yaml  rep_1787.yaml  rep_1788.yaml  rep_1789.yaml  rep_1790.yaml  rep_1791.yaml  rep_1792.yaml  rep_1793.yaml  rep_1794.yaml  rep_1795.yaml  rep_1796.yaml  rep_1797.yaml  rep_1798.yaml  rep_1799.yaml  rep_1800.yaml  rep_1801.yaml  rep_1802.yaml  rep_1803.yaml  rep_1804.yaml  rep_1805.yaml
notebooks/periodic/results/cot_intens/: rep_1776.yaml  rep_1777.yaml  rep_1778.yaml  rep_1779.yaml  rep_1780.yaml  rep_1781.yaml  rep_1782.yaml  rep_1783.yaml  rep_1784.yaml  rep_1785.yaml  rep_1786.yaml  rep_1787.yaml  rep_1788.yaml  rep_1789.yaml  rep_1790.yaml  rep_1791.yaml  rep_1792.yaml  rep_1793.yaml  rep_1794.yaml  rep_1795.yaml  rep_1796.yaml  rep_1797.yaml  rep_1798.yaml  rep_1799.yaml  rep_1800.yaml  rep_1801.yaml  rep_1802.yaml  rep_1803.yaml  rep_1804.yaml  rep_1805.yaml
notebooks/periodic/results/cot_noise_intens/: rep_1777.yaml  rep_1778.yaml  rep_1779.yaml  rep_1780.yaml  rep_1781.yaml  rep_1782.yaml  rep_1783.yaml  rep_1784.yaml  rep_1785.yaml  rep_1786.yaml  rep_1787.yaml  rep_1788.yaml  rep_1789.yaml  rep_1790.yaml  rep_1791.yaml  rep_1792.yaml  rep_1793.yaml  rep_1794.yaml  rep_1795.yaml  rep_1796.yaml  rep_1797.yaml  rep_1798.yaml  rep_1799.yaml  rep_1800.yaml  rep_1801.yaml  rep_1802.yaml  rep_1803.yaml  rep_1804.yaml  rep_1805.yaml
notebooks/periodic/results/decode_extens/: rep_1776.yaml  rep_1777.yaml  rep_1778.yaml  rep_1779.yaml  rep_1780.yaml  rep_1781.yaml  rep_1782.yaml  rep_1783.yaml  rep_1784.yaml  rep_1785.yaml  rep_1786.yaml  rep_1787.yaml  rep_1788.yaml  rep_1789.yaml  rep_1790.yaml  rep_1791.yaml  rep_1792.yaml  rep_1793.yaml  rep_1794.yaml  rep_1795.yaml  rep_1796.yaml  rep_1797.yaml  rep_1798.yaml  rep_1799.yaml  rep_1800.yaml  rep_1801.yaml  rep_1802.yaml  rep_1803.yaml  rep_1804.yaml  rep_1805.yaml
notebooks/periodic/results/decode_intens/: rep_1777.yaml  rep_1778.yaml  rep_1779.yaml  rep_1780.yaml  rep_1781.yaml  rep_1782.yaml  rep_1783.yaml  rep_1784.yaml  rep_1785.yaml  rep_1786.yaml  rep_1787.yaml  rep_1788.yaml  rep_1789.yaml  rep_1790.yaml  rep_1791.yaml  rep_1792.yaml  rep_1793.yaml  rep_1794.yaml  rep_1795.yaml  rep_1796.yaml  rep_1797.yaml  rep_1798.yaml  rep_1799.yaml  rep_1800.yaml  rep_1801.yaml  rep_1802.yaml  rep_1803.yaml  rep_1804.yaml  rep_1805.yaml
notebooks/periodic/results/decode_noise_intens/: rep_1777.yaml  rep_1778.yaml  rep_1779.yaml  rep_1780.yaml  rep_1781.yaml  rep_1782.yaml  rep_1783.yaml  rep_1784.yaml  rep_1785.yaml  rep_1786.yaml  rep_1787.yaml  rep_1788.yaml  rep_1789.yaml  rep_1790.yaml  rep_1791.yaml  rep_1792.yaml  rep_1793.yaml  rep_1794.yaml  rep_1795.yaml  rep_1796.yaml  rep_1797.yaml  rep_1798.yaml  rep_1799.yaml  rep_1800.yaml  rep_1801.yaml  rep_1802.yaml  rep_1803.yaml  rep_1804.yaml  rep_1805.yaml
notebooks/periodic/results/moe_extens/: rep_1776.yaml  rep_1777.yaml  rep_1778.yaml  rep_1779.yaml  rep_1780.yaml  rep_1781.yaml  rep_1782.yaml  rep_1783.yaml  rep_1784.yaml  rep_1785.yaml  rep_1786.yaml  rep_1787.yaml  rep_1788.yaml  rep_1789.yaml  rep_1790.yaml  rep_1791.yaml  rep_1792.yaml  rep_1793.yaml  rep_1794.yaml  rep_1795.yaml  (+10 more)
notebooks/result2/: cot_intens.yaml
notebooks/results/: decode_intens.yaml  one_hop_cot_intens.yaml  one_hop_decode_intens.yaml
smolbench/evals/: README.md  __init__.py  aws.py  ec2.py  openrouter.py  primeintellect.py  provider.py
smolbench/induction/: chromatic.py  periodic.py
(+59 files in other folders)
