[project]
name = "leaneval"
version = "0.1.0"
description = "Progressive-context Lean 4 theorem-proving evaluation"
requires-python = ">=3.11,<3.13"
dependencies = [
    "lean-dojo>=2.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]

[tool.uv]
package = false
